[package]
name = "scans-validator-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
solana-client = "1.14.16"
solana-sdk = "1.14.16"
solana-transaction-status = "1.18.16"
dotenv = "0.15.0"
